--- a/www/styles/style.css
+++ b/www/styles/style.css
@@ -3450,3 +3450,128 @@ grid-row-end: -1;
 
 
   /* Fim SECÇÃO AS MELHORES SOLUÇÕES */
+
+  /* INÍCIO SECÇÃO A NOSSA EXPERIÊNCIA */
+.our_experience{
+    display: flex;
+    background: #212121;
+  }
+  .our_experience_left_title{
+    font-family: Ubuntu;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 98px;
+    line-height: 112px;
+    letter-spacing: -1.5px;
+    color: #FFFFFF;
+  }
+  
+  .our_experience_left_text{
+    width: 80%;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0.5px;
+    color: #FFFFFF;
+  }
+  
+  .our_experience_right_text{
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 1.5px;
+    text-transform: uppercase;
+    color: #FFFFFF;
+  }
+  
+  .our_experience_left{
+    width:50%;
+    margin-left: 11%;
+    margin-top: 8%;
+    padding-bottom: 8%;
+  }
+  .our_experience_right{
+    width: 50%;
+    margin-right: 11%;
+    align-self: center;
+    margin-left: 5%;
+    margin-top: 8%;
+    padding-bottom: 8%;
+  }
+  
+  .development_text_first_line{
+    display: flex;
+    font-family: Ubuntu;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 24px;
+    letter-spacing: 0.1px;
+    color: rgba(255, 255, 255, 0.74);
+    margin-right: 2%;
+  }
+  
+  
+  .development_text_second_line{
+    display: flex;
+    font-family: Ubuntu;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 24px;
+    letter-spacing: 0.1px;
+    color: rgba(255, 255, 255, 0.74);
+    margin-right: 2%;
+  }
+  
+  .infrastructures_text_first_line{
+    display: flex;
+    font-family: Ubuntu;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 24px;
+    letter-spacing: 0.1px;
+    color: rgba(255, 255, 255, 0.74);
+    margin-right: 2%;
+  }
+  
+  .business_text_first_line{
+    display: flex;
+    font-family: Ubuntu;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 24px;
+    letter-spacing: 0.1px;
+    color: rgba(255, 255, 255, 0.74);
+    margin-right: 2%;
+  }
+  .first_dev{
+    margin-right: 10%;
+  }
+  
+  .our_experience_right_title{
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 1.5px;
+    text-transform: uppercase;
+    color: #FFFFFF;
+  }
+  
+  .development{
+    margin-bottom: 8%;
+  }
+  
+  .infrastructures{
+    margin-bottom: 8%;
+  }
+  
+  /* FIM SECÇÃO A NOSSA EXPERIÊNCIA */
