--- a/www/styles/style.css
+++ b/www/styles/style.css
@@ -3489,13 +3489,13 @@ grid-row-end: -1;
   }
   
   .our_experience_left{
-    width:50%;
+    width:39%;
     margin-left: 11%;
     margin-top: 8%;
     padding-bottom: 8%;
   }
   .our_experience_right{
-    width: 50%;
+    width: 31%;
     margin-right: 11%;
     align-self: center;
     margin-left: 5%;
@@ -3575,3 +3575,67 @@ grid-row-end: -1;
   }
   
   /* FIM SECÇÃO A NOSSA EXPERIÊNCIA */
+
+
+  /* INICIO SECÇÃO SETORES IT */
+
+
+  .sectors-it{
+    background: #212121;
+  }
+
+  .sectors-it-content{
+      margin-right: 11%;
+      margin-left: 11%;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      min-height: 650px;
+  }
+  .sectors-it-title-1{
+    font-family: Ubuntu;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 98px;
+    line-height: 112px;
+    letter-spacing: -1.5px;
+    color: #FFFFFF;
+    padding-bottom: 30px;
+
+  }
+  .sectors-it-title-2{
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0.5px;
+    color: #FFFFFF;
+    width: 60%;
+
+  }
+  .sectors-it-content-titles{
+      width: 50%;
+
+  }
+  .sectores-it-content-info{
+      width: 50%;
+      text-align: right;
+      position: relative;
+  }
+  .percentage-it{
+      position: absolute;
+      top: 43%;
+      right: 140px;
+      transform: translate(-50%);
+      font-family: Ubuntu;
+      font-style: normal;
+      font-weight: bold;
+      font-size: 49px;
+      line-height: 56px;
+      color: #616161;
+      
+  }
+
+
+  /* FIM SECÇÃO SETORES IT */
