--- a/www/styles/style.css
+++ b/www/styles/style.css
@@ -3366,7 +3366,7 @@ grid-row-end: -1;
 .flip-card {
     background-color: transparent;
     width: 46%;
-    min-height: 310px;
+    min-height: 380px;
     border: 1px solid #f1f1f1;
     perspective: 1000px; /* Remove this if you don't want the 3D effect */
   }
@@ -3419,7 +3419,7 @@ grid-row-end: -1;
     }
     .flip-card{
         width: 48.5%;
-        min-height: 380px;
+        min-height: 450px;
     }
   }
   @media(max-width: 575px) {
@@ -3429,7 +3429,7 @@ grid-row-end: -1;
       }
       .flip-card-inner{
           width: 100%;
-          height: 380px;
+          height: 480px;
       }
       .flip-card{
           width: 100%;
@@ -3593,14 +3593,6 @@ grid-row-end: -1;
     .our_experience_right{
       margin-right: 2%;
     }
-   /* .our_experience_left_title{
-      display: flex;
-      align-self: center;
-    }
-    .our_experience_left_text{
-      display: flex;
-      align-self: center;
-    }*/
   }
   
   @media only screen and (max-width: 992px) {
@@ -3617,10 +3609,6 @@ grid-row-end: -1;
       width: 100%;
       text-align: left;
       padding: 0;
-    }
-  
-    @media only screen and (max-width: 725px) {
-      
     }
   
     .our_experience_right{
@@ -3643,6 +3631,69 @@ grid-row-end: -1;
       flex-wrap: wrap;
     }
   }
+
+  .our_experience_left_text_mobile{
+      display: none;
+  }
+    
+  @media only screen and (max-width: 775px) {
+      .development_text_first_line, .development_text_second_line, .infrastructures_text_first_line,.business_text_first_line{
+          flex-direction: column;
+          margin:0px;
+      }
+      .our_experience_right{
+          width: 100%;
+          margin:0px;
+      }
+      .our_experience_left{
+          margin: 0px;
+          width: 100%;
+      }
+      .our_experience{
+          flex-direction: column;
+      }
+      .our_experience_left_text{
+          display: none;
+      }
+      .our_experience_left_text_mobile{
+        display: block;
+        font-family: Montserrat;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 20px;
+        text-align: center;
+        letter-spacing: 0.25px;
+        color: #FFFFFF;
+    }
+    .right_content{
+        margin: 0px;
+        text-align: center;
+    }
+    .our_experience_left{
+        text-align: center;
+    }
+    .our_experience_left_title{
+        padding-top:40px;
+        margin-right: 12.5%;
+        margin-left: 12.5%;
+        text-align: center;
+    }
+    .first_dev{
+        margin-right: 0px;
+    }
+    .first_dev svg{
+        margin-right: 5px;
+    }
+    .our_experience_left_text_mobile{
+        text-align: center;
+        margin-right: 15%;
+        margin-left: 15%;
+        padding-top: 20px;
+    }
+
+      
+}
   
     
   /* FIM SECÇÃO A NOSSA EXPERIÊNCIA */
@@ -3891,10 +3942,6 @@ grid-row-end: -1;
         .it-mobile-item progress{
             width: 100%;
         }
-
-
-
-
 
     }
 
